--- a/modulo2/typescript/package.json
+++ b/modulo2/typescript/package.json
@@ -9,6 +9,7 @@
   "author": "Santiago Suarez",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
